k8sstagingingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: kdashboard
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/server-alias: 'xxxxxxxxxxxxx'
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/managed-by: Helm
  name: kdashboard
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: xxxxxxxxxxxxx
    http:
      paths:
      - backend:
          service:
            name: kdashboard-kubernetes-dashboard
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - xxxxxxxxxxxxx
    secretName: miniapp-ingress-tls
